--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
       </h1>
       <h2 class="sm-heading">
         Hi, I'm Blake - a web developer from Nashville, Tennessee, who is here
-        to help your business grow.Hi, I'm Blake - a web developer from
-        Nashville, Tennessee, who is here to help your business grow.
+        to help your business grow.
       </h2>
       <div class="icons">
         <a href="https://github.com/BlakeEscue" target="_blank">
