--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         Blake <span class="text-secondary">Escue</span>
       </h1>
       <h2 class="sm-heading">
-        Hi, I'm Blake - a web developer from Nashville, Tennessee, who is here
-        to help your business grow.
+        Hi, I'm Blake - a web developer from Nashville, who is here to help your
+        business grow.
       </h2>
       <div class="icons">
         <a href="https://github.com/BlakeEscue" target="_blank">
