--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
         <div class="item">
           <h3 class="project-name">Nashville Yorkies</h3>
           <a href="#!">
-            <img src="img/projects/project1.jpg" alt="Project" />
+            <img src="https://i.etsystatic.com/8732782/r/il/e9180e/1226032248/il_794xN.1226032248_4g4m.jpg" alt="Project" />
           </a>
           <a
             href="https://www.nashvilleyorkies.com/"
