--- a/work.html
+++ b/work.html
@@ -66,7 +66,7 @@
         <div class="item">
           <h3 class="project-name">Kingsford Frenchies</h3>
           <a href="#!">
-            <img src="img/projects/project1.jpg" alt="Project" />
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT3xWlLxXvHc-3sEPSYQXKDWUMMN0dqkhcAyEX8fVBjKeQVUaCF&usqp=CAU" alt="Project" />
           </a>
           <a
             href="https://www.kingsfordfrenchies.com/"
